# storage/api-docs/api-docs.json
@@ -616,6 +616,29 @@
                 ]
             }
         },
+        "/api/dashbboard": {
+            "get": {
+                "tags": [
+                    "Dashboard"
+                ],
+                "summary": "Get Dashboard list",
+                "description": "Returns Dashboard list",
+                "operationId": "getDashboard",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key_security_example": []
+                    }
+                ]
+            }
+        },
         "/api/schedules": {
             "get": {
                 "tags": [
